<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/item"
        android:orientation="horizontal"
        android:paddingVertical="16dp"
        android:background="@color/white"
        android:layout_height="wrap_content">

    <ImageView
            android:id="@+id/img_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/goal"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/task_title" />


    <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_type"
            app:layout_constraintBottom_toTopOf="@id/tv_description"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/study_lesson" />


    <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            app:layout_constraintEnd_toEndOf="@id/tv_date"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_below="@id/tv_title"
            android:text="@string/_4_00pm" />

    <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toEndOf="@id/img_type"
            android:layout_marginStart="16dp"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study_lesson"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_time"
            app:layout_constraintEnd_toStartOf="@id/btn_delete"
            android:layout_marginEnd="32dp"
            android:layout_alignTop="@id/tv_time"
            android:layout_alignParentEnd="true" />



    <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/delete"
            android:scaleType="fitXY"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />




</androidx.constraintlayout.widget.ConstraintLayout>