<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/gray"
        android:layout_height="match_parent"
        tools:context=".view.main.MainFragment">


    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header">

        <TextView
                android:id="@+id/tv_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:textSize="18sp"
                android:layout_marginTop="24dp"
                android:textColor="@color/white"
                android:text="@string/october_20_2022"
                android:fontFamily="@font/roboto_medium" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/my_todo_list" />

    </FrameLayout>

    <LinearLayout
            android:id="@+id/linearlayout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:layout_gravity="center">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true"

                >

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_active_tasks"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    tools:listitem="@layout/item_task"

                    android:layout_height="wrap_content"
                    tools:itemCount="3"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.cardview.widget.CardView>

        <TextView
                android:id="@+id/tv_show__active_tasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:text="@string/show_all_tasks"
                android:fontFamily="@font/roboto_medium"
                android:visibility="gone"
                />

        <TextView
                android:id="@+id/tv_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginVertical="24dp"
                android:textSize="16sp"

                />

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true"

                >

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_passive_tasks"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    tools:listitem="@layout/item_task"

                    android:layout_height="wrap_content"
                    tools:itemCount="3"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.cardview.widget.CardView>

        <TextView
                android:id="@+id/tv_show_passive_tasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:text="@string/show_all_tasks"
                android:fontFamily="@font/roboto_medium"
                android:visibility="gone"
                />

    </LinearLayout>

    <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="24dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="16sp"
            android:paddingVertical="12dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/add_new_task" />


    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/img_empty"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_height="300dp"
            app:lottie_autoPlay="true"
            android:visibility="gone"
            app:lottie_loop="true" />

</FrameLayout>