<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray"
        tools:context=".view.changeTask.DialogTaskFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_title"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginBottom="8dp"
                    android:textSize="14sp"

                    />

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:hintEnabled="false"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    android:layout_marginBottom="24dp"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_task_title"
                        android:layout_width="match_parent"
                        android:hint="@string/task_title"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text"
                        android:textSize="16sp"
                        android:inputType="text"
                        android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="14sp"

                        />


                <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="16dp"
                        android:layout_height="wrap_content">

                    <RadioButton
                            android:id="@+id/btn_task"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radio_task"
                            android:button="@null" />

                    <RadioButton
                            android:id="@+id/btn_event"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:background="@drawable/radio_event"
                            android:button="@null" />

                    <RadioButton
                            android:id="@+id/btn_goal"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radio_goal"
                            android:button="@null" />

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="24dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:gravity="top"
                            android:fontFamily="@font/roboto_medium"
                            android:layout_marginBottom="8dp"
                            android:textSize="14sp"

                            />

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            app:boxCornerRadiusBottomEnd="8dp"
                            app:boxCornerRadiusBottomStart="8dp"
                            app:hintEnabled="false"
                            android:layout_marginTop="26dp"
                            app:boxCornerRadiusTopEnd="8dp"
                            app:boxCornerRadiusTopStart="8dp"
                            android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_date"
                                android:layout_width="match_parent"
                                android:hint="@string/date"
                                android:drawableEnd="@drawable/calendar"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edit_text"
                                android:textSize="16sp"
                                android:inputType="text"
                                android:autofillHints="" />

                    </com.google.android.material.textfield.TextInputLayout>

                </FrameLayout>

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time"
                            android:gravity="top"
                            android:fontFamily="@font/roboto_medium"
                            android:layout_marginBottom="8dp"
                            android:textSize="14sp"

                            />

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            app:boxCornerRadiusBottomEnd="8dp"
                            app:boxCornerRadiusBottomStart="8dp"
                            app:hintEnabled="false"
                            android:layout_marginTop="26dp"
                            app:boxCornerRadiusTopEnd="8dp"
                            app:boxCornerRadiusTopStart="8dp"
                            android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_time"
                                android:layout_width="match_parent"
                                android:hint="@string/time"
                                android:drawableEnd="@drawable/time"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edit_text"
                                android:textSize="16sp"
                                android:inputType="text"
                                android:autofillHints="" />

                    </com.google.android.material.textfield.TextInputLayout>

                </FrameLayout>


            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginBottom="8dp"
                    android:textSize="14sp"

                    />

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:hintEnabled="false"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    android:layout_marginBottom="24dp"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_description"
                        android:layout_width="match_parent"
                        android:hint="@string/notes"
                        android:layout_height="120dp"
                        android:background="@drawable/edit_text"
                        android:textSize="16sp"
                        android:gravity="top"
                        android:inputType="text|textImeMultiLine"
                        android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <Button
                android:id="@+id/btn_add"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="16sp"
                android:paddingVertical="12dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/save" />

        <Button
                android:id="@+id/btn_delete"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="16sp"
                android:backgroundTint="@color/red"
                android:paddingVertical="12dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/delete" />

    </LinearLayout>

        </LinearLayout>




</FrameLayout>